hphp/hack/test/typecheck/call_in_static_dict_like_array.php.exp
File "call_in_static_dict_like_array.php", line 7, characters 28-32:
Invalid expression in constant initializer (Parsing[1002])
