hphp/hack/test/typecheck/call_in_static_dict_like_array.php
<?hh

class C {
  public static function f() {
    return "lol";
  }
  public static $x = darray['a' => C::f()];
}
